[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ray-tpu"
version = "0.0.5"
authors = [
  { name="Richard Liu", email="ricliu@google.com" },
  { name="Quinn Yan", email="qinyiyan@google.com" },
]
description = "An utility for running Ray with Cloud TPUs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/richardsliu/ray-tpu"
Issues = "https://github.com/richardsliu/ray-tpu/issues"
